[package]
name = "io-ensure"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/io-ensure"
documentation = "https://docs.rs/io-ensure"
description = "Prototype of the `std::io::ensure` family of macros"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]

[dev-dependencies]
